# ai-6600

./: .gitignore  Procfile  README.md  index.html  indexStyle.css  package.json  pyproject.toml  requirements.txt
backend/: alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: 1241920f1f7e_create_authentication_table.py  64424ac0ef3f_add_processing_status_to_batch.py  f71266695671_add_batch_table.py
backend/app/api/: auth.py  model.py
backend/app/core/: config.py  middlewares.py  security.py
backend/app/db/: base.py
backend/app/db/crud/: __init__.py  authentication.py  base.py  batch.py
backend/app/db/models/: __init__.py  authentication.py  batch.py
backend/app/db/schemas/: __init__.py  authentication.py  batch.py
backend/app/db/structures/: __init__.py  auth_route.py  batch.py  token.py  upload.py
backend/app/utils/: dependencies.py  remover.py  train_1.0.py
backend/app/utils/models/test_model/: saved_model.pb
backend/app/utils/test_model/: keras_metadata.pb
backend/app/utils/test_model/variables/: variables.data-00000-of-00001  variables.index
dataset/train/: commonSort  watermark.py  watermarker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  ImagePreview.tsx  Status.tsx  Upload.tsx
frontend/src/static/: jobs.js
frontend/static/: indexStyle.css
upload/: README.md
